Stylesheet update, created js files and wrote initial code for createCalendar and changeUI

--- a/src/client/styles/step2.scss
+++ b/src/client/styles/step2.scss
@@ -1,3 +1,12 @@
 #step-2{
     display:none;
+    flex-direction: column;
+    max-width: 1000px;
+    align-items: center;
+
+    #calendar{
+        border: navy;
+        border-width: 2px;
+        border-style: solid;
+    }
 }
