--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -12,7 +12,7 @@
             <div id = "info-submit">
                 <div class ="questions">Where are you going?: <input type = "text" id = "first-destination"></div>
                 <div class ="questions">When are you leaving?: <input type = "date" id = "depart-date"><br></div>
-                <div class ="questions">For how many days?: <input type = "number" id = "duration"><br></div>
+                <div class ="questions">When are you returning?: <input type = "date" id = "return-date"><br></div>
                 <div class ="questions">Multiple destinations?: <input type ="checkbox" id ="multicity"><br></div>
                 <input id = "submit-button" type ="submit">
             </div>
