--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,15 +9,15 @@
             <header>
                 <h1>Adventure waits for No one!</h1>
             </header>
-            <div id = "info-submit">
-                <form onsubmit = "return Client.updateUI(event)">
+            <!-- <form class = "" onsubmit="return Client.submitForm(event)"> -->
+                <div id = "info-submit">
                     <div class ="questions">Where are you going?: <input type = "text" id = "first-destination"></div>
                     <div class ="questions">When are you leaving?: <input type = "date" id = "depart-date"><br></div>
                     <div class ="questions">When are you returning?: <input type = "date" id = "return-date"><br></div>
                     <div class ="questions">Multiple destinations?: <input type ="checkbox" id ="multicity"><br></div>
-                    <input id = "submit-button" type ="submit" onsubmit = "return Client.updateUI(event)">
-                </form>
-            </div>
+                    <input id = "submit-button" type ="submit" value = "Submit" onclick="return Client.submitForm(event)">
+                </div>
+            <!-- </form> -->
             <footer>
                 hello i am footer
             </footer>
@@ -33,6 +33,8 @@
                 hello i am footer
                 <!-- Should have button to return to the beginning -->
             </footer>
+            <script>
+            </script>
         </div>
     </body>
 </html>
