Updated form submission and change UI

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -14,7 +14,7 @@
                     <div class ="questions">Where are you going?: <input type = "text" id = "first-destination"></div>
                     <div class ="questions">When are you leaving?: <input type = "date" id = "depart-date"><br></div>
                     <div class ="questions">When are you returning?: <input type = "date" id = "return-date"><br></div>
-                    <div class ="questions">Multiple destinations?: <input type ="checkbox" id ="multicity"><br></div>
+                    <!-- <div class ="questions">Multiple destinations?: <input type ="checkbox" id ="multicity"><br></div> -->
                     <input id = "submit-button" type ="submit" value = "Submit" onclick="return Client.submitForm(event)">
                 </div>
             <!-- </form> -->
