fixed bugs in validDate, changeUI, dateConvert, making changes to calendarCreate

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,8 +26,10 @@
             <h1 id = "destination">Insert Destination Here</h1>
             <!-- Background should reflect initial city -->
             <div id = "calendar">
+                <table><th>SUN</th><th>MON</th><th>TUE</th><th>WED</th><th>THU</th><th>FRI</th><th>SAT</th>
                 <!-- number of boxes that reflect total days will appear here with weather icon, should have optimization to add events/ideas to itinerary, box should grow accordingly -->
                 <!-- Need box to click if going to different city (Only if they checked multiple city box), if clicked, will change color to following boxes and make new call to api to get updated weather data. Footer background updates to last location image? -->
+                </table>
             </div>
             <footer>
                 hello i am footer
