--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,6 +25,7 @@
         <div id ="step-2" class = "info">
             <h1 id = "destination">Insert Destination Here</h1>
             <!-- Background should reflect initial city -->
+            <h2>Trip countdown here</h2>
             <h2 id = "month">Insert Month here</h2>
             <div id = "calendar">
                 <!-- number of boxes that reflect total days will appear here with weather icon, should have optimization to add events/ideas to itinerary, box should grow accordingly -->
