--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -23,20 +23,19 @@
             </footer>
         </div>
         <div id ="step-2" class = "info">
-            <h1 id = "destination">Insert Destination Here</h1>
             <!-- Background should reflect initial city -->
             <h2>Trip countdown here</h2>
-            <h2 id = "month">Insert Month here</h2>
-            <div id = "calendar">
-                <!-- number of boxes that reflect total days will appear here with weather icon, should have optimization to add events/ideas to itinerary, box should grow accordingly -->
-                <!-- Need box to click if going to different city (Only if they checked multiple city box), if clicked, will change color to following boxes and make new call to api to get updated weather data. Footer background updates to last location image? -->
+            <h1 id = "destination">Insert Destination Here</h1>
+            <h3 id = "view-cal">Click here to view calendar below!</h3>
+            <div id ="step-3" class = "info>">
+                <h2 id = "month">Insert Month here</h2>
+                <div id = "calendar">
+                </div>
             </div>
-            <footer>
+        </div>
+        <footer>
                 hello i am footer
                 <!-- Should have button to return to the beginning -->
-            </footer>
-            <script>
-            </script>
-        </div>
+        </footer>
     </body>
 </html>
