altered calendar function

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,7 +9,6 @@
             <header>
                 <h1>Adventure waits for No one!</h1>
             </header>
-            <!-- <form class = "" onsubmit="return Client.submitForm(event)"> -->
                 <div id = "info-submit">
                     <div class ="questions">Where are you going?: <input type = "text" id = "first-destination"></div>
                     <div class ="questions">When are you leaving?: <input type = "date" id = "depart-date"><br></div>
@@ -17,21 +16,17 @@
                     <!-- <div class ="questions">Multiple destinations?: <input type ="checkbox" id ="multicity"><br></div> -->
                     <input id = "submit-button" type ="submit" value = "Submit" onclick="return Client.submitForm(event)">
                 </div>
-            <!-- </form> -->
-            <footer>
-                hello i am footer
-            </footer>
         </div>
         <div id ="step-2" class = "info">
             <!-- Background should reflect initial city -->
-            <h2>Trip countdown here</h2>
-            <h1 id = "destination">Insert Destination Here</h1>
-            <h3 id = "view-cal">Click here to view calendar below!</h3>
+            <h2 id = "destination">Insert Destination Here</h1>
+                <p>Trip countdown here</p>
             <div id ="step-3" class = "info>">
                 <h2 id = "month">Insert Month here</h2>
                 <div id = "calendar">
                 </div>
             </div>
+            <a id = "view-cal">Click here to view calendar below!</a>
         </div>
         <footer>
                 hello i am footer
