--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,9 +1,15 @@
+
 body{
     background-color: rgb(255, 226, 231);
     display: grid;
     grid-template-areas:
     "head"
     "info"
+    "back"
+    "cal"
+    "cal"
+    "next"
+    "tab"
     "foot";
     justify-content: center;
 
@@ -22,7 +28,45 @@ body{
             max-width: 100px;
         }
     }
+    #next{
+        display:none;
+        padding-top: 10px;
+        padding-bottom:10px;
+        grid-area: next;
+        justify-self: center;
+        justify-content: center;
+        width: 100px;
+        background-color:lightblue;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        box-shadow: 5px 5px 5px grey;
+    }
+    #back{
+        grid-area:back;
+        padding-top:10px;
+        justify-self:center;
+        justify-content: center;
+        width: 100px;
+        display:none;
+        background-color:lightblue;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        box-shadow: 5px 5px 5px grey;
+    }
+    #view-cal{
+        grid-area:tab;
+        padding-top:20px;
+        padding-bottom:20px;
+        width:200px;
+        justify-self: center;
+        justify-content: center;
+        display: none;
+    }
 
+    #view-cal:hover{
+        color:yellow;
+    }
+    
     footer{
         grid-area: foot;
     }
