--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,21 +13,22 @@
                     <div class ="questions">Where are you going?: <input type = "text" id = "first-destination"></div>
                     <div class ="questions">When are you leaving?: <input type = "date" id = "depart-date"><br></div>
                     <div class ="questions">When are you returning?: <input type = "date" id = "return-date"><br></div>
-                    <!-- <div class ="questions">Multiple destinations?: <input type ="checkbox" id ="multicity"><br></div> -->
                     <input id = "submit-button" type ="submit" value = "Submit" onclick="return Client.submitForm(event)">
                 </div>
         </div>
         <div id ="step-2" class = "info">
             <!-- Background should reflect initial city -->
-            <h2 id = "destination">Insert Destination Here</h1>
+            <h1 id = "destination">Insert Destination Here</h1>
                 <p>Trip countdown here</p>
-            <div id ="step-3" class = "info>">
-                <h2 id = "month">Insert Month here</h2>
-                <div id = "calendar">
-                </div>
-            </div>
-            <a id = "view-cal">Click here to view calendar below!</a>
         </div>
+        <div id= "back"><img src="https://img.icons8.com/ultraviolet/40/000000/collapse-arrow.png"/></div>
+        <div id ="step-3" class = "info">
+            <h2 id = "month" class = >Insert Month here</h2>
+            <div id = "calendar">
+            </div>
+        </div>
+        <div id="next"><img src="https://img.icons8.com/ultraviolet/40/000000/expand-arrow--v1.png" alt="next month"/></div>
+        <a id = "view-cal">Click here to view calendar below!</a>
         <footer>
                 hello i am footer
                 <!-- Should have button to return to the beginning -->
