--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -20,6 +20,10 @@ body{
        padding:20px; 
        font-size: 70px; 
        grid-area: head;
+       min-width: 500px;
+       width: 1000px;
+       text-align:right;
+       padding-right:100px;
     }
 
     .info{
@@ -29,6 +33,7 @@ body{
         }
     }
     #next{
+        z-index:0;
         display:none;
         padding-top: 10px;
         padding-bottom:10px;
@@ -40,8 +45,11 @@ body{
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         box-shadow: 5px 5px 5px grey;
+        margin-bottom: 20px;
     }
     #back{
+        z-index:0;
+        position: relative;
         grid-area:back;
         padding-top:10px;
         justify-self:center;
@@ -57,7 +65,7 @@ body{
         grid-area:tab;
         padding-top:20px;
         padding-bottom:20px;
-        width:200px;
+        width:100%;
         justify-self: center;
         justify-content: center;
         display: none;
