--- a/src/client/styles/step2.scss
+++ b/src/client/styles/step2.scss
@@ -3,4 +3,11 @@
     flex-direction: column;
     align-items: center;
 
+    #trip-info{
+        width: 1000px;
+        margin-bottom: 10px;
+        z-index:2;
+        padding:10px;
+        text-align: center;
+    }
 }
