--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,11 +19,10 @@
         <div id ="step-2" class = "info">
             <!-- Background should reflect initial city -->
             <h1 id = "destination">Insert Destination Here</h1>
-                <p>Trip countdown here</p>
         </div>
         <div id= "back"><img src="https://img.icons8.com/ultraviolet/40/000000/collapse-arrow.png"/></div>
         <div id ="step-3" class = "info">
-            <h2 id = "month" class = >Insert Month here</h2>
+            <h2 id = "month" >Insert Month here</h2>
             <div id = "calendar">
             </div>
         </div>
