--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,7 +10,9 @@
                 <h1>Adventure waits for No one!</h1>
             </header>
                 <div id = "info-submit">
-                    <div class ="questions">Where are you going?: <input type = "text" id = "first-destination"></div>
+                    <div class ="questions">Where are you going?: <input type = "text" id = "first-destination" placeholder = "City"></div>
+                    <div class>If this city is in the US, please input the state abbreviation or your results will be less accurate!: <input type = "text" id="state" maxlength = "2" placeholder="State"></div>
+                    <div class = "questions"> What country is this city in? Please input the country code! (two letters): <input type = "text" id="country"maxlength = "2" placeholder = "Country Code"></div>
                     <div class ="questions">When are you leaving?: <input type = "date" id = "depart-date"><br></div>
                     <div class ="questions">When are you returning?: <input type = "date" id = "return-date"><br></div>
                     <input id = "submit-button" type ="submit" value = "Submit" onclick="return Client.submitForm(event)">
