--- a/src/client/styles/step3.scss
+++ b/src/client/styles/step3.scss
@@ -4,6 +4,7 @@
     align-items: center;
     grid-area: cal;
     z-index: 0;
+    bottom:150px;
 
     h2{
         border-top-left-radius: 10px;
@@ -25,6 +26,7 @@
 
     }
     .active-calendar{
+
         padding-top:20px;
         padding-left:10px;
         padding-right:10px;
