--- a/src/client/styles/step3.scss
+++ b/src/client/styles/step3.scss
@@ -5,6 +5,7 @@
     grid-area: cal;
     z-index: 0;
     bottom:150px;
+    margin-bottom: 60px;
 
     h2{
         border-top-left-radius: 10px;
@@ -26,7 +27,7 @@
 
     }
     .active-calendar{
-
+        z-index: 0;
         padding-top:20px;
         padding-left:10px;
         padding-right:10px;
@@ -96,7 +97,6 @@
         margin-bottom: 100px;
     }
     #back{
-        z-index:0;
         grid-area:back;
         padding-top:10px;
         justify-self:center;
