--- a/src/client/styles/step3.scss
+++ b/src/client/styles/step3.scss
@@ -51,6 +51,8 @@
             border-top-right-radius: 10px;
             padding: 10px;
             background-color: white;
+            font-size: 15px;
+            font-weight: bold;
             
         }
 
@@ -65,7 +67,7 @@
             min-height:25%;
 
             p{
-                max-height: 40px;
+                max-height: max-content;
                 text-align: center;
             }
         }
