--- a/src/client/styles/step3.scss
+++ b/src/client/styles/step3.scss
@@ -95,6 +95,10 @@
         border-bottom-right-radius: 10px;
         margin-bottom: 100px;
     }
+
+    #next:hover{
+        box-shadow:5px 5px 5px white;
+    }
     #back{
         grid-area:back;
         padding-top:10px;
@@ -105,5 +109,8 @@
         background-color:lightblue;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
+    }
+    #back:hover{
+        box-shadow:5px 5px 5px white;
     }
 }
