--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -35,7 +35,7 @@ body{
         grid-area: info;
         font-family: 'Source Serif Pro', serif;
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 600;
         #submit-button{
             max-width: 100px;
         }
@@ -58,9 +58,10 @@ body{
         min-height: 50px;
         align-items:center;
         margin-top: 10px;
+        grid-template-areas:
+        "bu1 bu2 bu3";
 
         #view-cal{
-            grid-area: foot;
             margin-top: 10px;
             padding: 5px;
             max-width:max-content;
@@ -69,10 +70,28 @@ body{
             color: black;
             opacity:85%;
             border-radius: 10px;
+            text-align:center;
         }
     
         #view-cal:hover{
             color:rgb(179, 115, 137);
+        }
+        #refresh{
+            position:fixed;
+            right: 10px;
+            bottom:16px;
+            margin-top: 10px;
+            padding: 5px;
+            max-width:max-content;
+            display: none;
+            background-color:pink;
+            color: black;
+            opacity:85%;
+            border-radius: 10px;
+            text-align:center;
+        }
+        #refresh:hover{
+            color:lightseagreen;
         }
     }
 }
