--- a/src/client/styles/step1.scss
+++ b/src/client/styles/step1.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     max-width: 1000px;
     align-items: center;
+
     
     #info-submit{
         display:flex;
@@ -14,6 +15,17 @@
         background-color: snow;
         border-radius: 5px;
         box-shadow: 0 4px 8px 0 rgb(175, 142, 147);
+        
+        p{
+            color: purple;
+            font-size: 16px;
+            padding-top:0px;
+            padding-bottom:0px;
+
+            a:hover{
+                color: palegreen;
+            }
+        }
     }
 
     .questions{
