--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -48,7 +48,6 @@ body{
     footer{
         grid-area: foot;
         position:fixed;
-        z-index: 1;
         left:0;
         bottom:0;
         width:100%;
@@ -62,13 +61,14 @@ body{
         "bu1 bu2 bu3";
 
         #view-cal{
+            z-index: -1;
             margin-top: 10px;
             padding: 5px;
             max-width:max-content;
             display: none;
             background-color:pink;
             color: black;
-            opacity:85%;
+            opacity:1;
             border-radius: 10px;
             text-align:center;
         }
@@ -77,6 +77,7 @@ body{
             color:rgb(179, 115, 137);
         }
         #refresh{
+            z-index: -1;
             position:fixed;
             right: 10px;
             bottom:16px;
@@ -86,7 +87,7 @@ body{
             display: none;
             background-color:pink;
             color: black;
-            opacity:85%;
+            opacity:1;
             border-radius: 10px;
             text-align:center;
         }
