--- a/src/client/styles/step2.scss
+++ b/src/client/styles/step2.scss
@@ -1,5 +1,4 @@
 #step-2{
-    display:none;
     flex-direction: column;
     align-items: center;
 
@@ -19,11 +18,11 @@
         margin-bottom: 10px;
         font-family: 'Source Serif Pro', serif;
         top:200px;
-        z-index:2;
+        z-index:-1;
         padding:10px;
         text-align: center;
         background-color: white;
-        opacity: 85%;
+        opacity: .75;
         border-radius: 10px;
         justify-self: center;
     }
